chore: support java 11 version
chore: improve code

chore: improve glassfish version

chore: upgrade 3th lib

fix: some api unit test

fix: core test

fix: resolve confict and improve common version

fix: startup error by script

chore: fix conflict

chore: resolve backend test

default dont use auth, and fix raft unit startup error

default dont use auth, and fix raft unit startup error

add permission verify

add some comments

improve cassandra version

improve code

remove empty file

fix: drop graph

fix: drop graph