@@ -102,6 +102,13 @@ if [ "$JAVA_OPTIONS" = "" ]; then
     #              -Xloggc:./logs/gc.log -XX:+PrintHeapAtGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps"
 fi
 
+JAVA_OPTIONS=""
+if [[ $JAVA_VERSION > "1.9" ]]; then
+    JAVA_OPTIONS="${JAVA_OPTIONS} --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED \
+                                  --add-modules=jdk.unsupported \
+                                  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED "
+fi
+
 # Using G1GC as the default garbage collector (Recommended for large memory machines)
 case "$GC_OPTION" in
     g1)
